add gc log